--- a/src/scss/_components/_NavBar.scss
+++ b/src/scss/_components/_NavBar.scss
@@ -1,5 +1,53 @@
+$height: 100px;
+$nav-bar-background: white;
+
 .nav-bar {
   display: flex;
   width: 100%;
   justify-content: space-around;
+  height: $height;
+  background: $nav-bar-background;
+  position: fixed;
+  z-index: 10;
+  box-shadow: 0px 0px 1px 2px rgba(116, 116, 125, 0.5);
+
+  .nav-bar-line-container {
+    position: absolute;
+    width: 100%;
+    height: $height;
+    display: flex;
+    margin-top: 37.5px;
+    justify-content: center;
+
+    .nav-bar-line {
+      background: black;
+      height: 2px;
+      width: 88%;
+    }
+  }
+
+  .nav-bar-circle {
+    width: 40px;
+    height: 40px;
+    border: 2px solid #293348;
+    border-radius: 50%;
+    background: $nav-bar-background;
+    transition: all 0.2s ease-in-out;
+    z-index: 11;
+  }
+
+  .nav-bar-circle:hover {
+    border-radius: 15%;
+  }
+
+  .nav-bar-item {
+    padding: 10px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
+
+  }
 }
