style mission and opportunity

--- a/src/scss/_components/_NavBar.scss
+++ b/src/scss/_components/_NavBar.scss
@@ -48,6 +48,9 @@ $nav-bar-background: white;
     flex-direction: column;
     align-items: center;
 
+    h3 {
+      white-space: nowrap;
+    }
 
   }
 }
