--- a/src/scss/_section.scss
+++ b/src/scss/_section.scss
@@ -3,4 +3,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+
+  .section-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 40px 0px;
+    
+    h1 {
+      text-align: center;
+      width: 75%;
+    }
+  }
 }
