--- a/src/scss/_components/_Label.scss
+++ b/src/scss/_components/_Label.scss
@@ -18,4 +18,8 @@ $label-color: #343e51;
     border: 2px solid $label-color;
     padding: 5px 15px;
   }
+
+  h2 {
+    font-size: 2.582em;
+  }
 }
