--- a/src/scss/_sections/_Opportunity.scss
+++ b/src/scss/_sections/_Opportunity.scss
@@ -5,6 +5,14 @@
     align-items: center;
     flex-direction: column;
     margin: 100px 0px;
+    @media all and(max-width: $mobile-width) {
+      margin: 30px 0px;
+    }
+
+    @media all and(max-width: $skinny-mobile-width) {
+      margin: 30px 0px;
+    }
+    margin: 30px 0px;
 
     h3, p {
       width: 100%;
