--- a/src/scss/_section.scss
+++ b/src/scss/_section.scss
@@ -16,4 +16,15 @@
       width: 75%;
     }
   }
+  .section-subtitle{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 40px 0px;
+    h3{
+      width: 50%;
+      text-align: center;
+    }
+  }
 }
