--- a/src/scss/_section.scss
+++ b/src/scss/_section.scss
@@ -16,7 +16,7 @@
       width: 75%;
     }
   }
-  .section-subtitle{
+  .section-subtitle {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,6 +25,20 @@
     h3{
       width: 50%;
       text-align: center;
+    }
+  }
+
+  .section-footer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .section-footer-text {
+      width: 50%;
+      text-align: center;
+      margin: 40px 0px;
+
     }
   }
 }
