--- a/src/scss/_components/_NavBar.scss
+++ b/src/scss/_components/_NavBar.scss
@@ -47,6 +47,7 @@ $nav-bar-background: white;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    width: 50px;
 
     h3 {
       white-space: nowrap;
