--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,7 @@ $skinny-mobile-width: 800px;
 @import './_sections/Investment.scss';
 
 @import './section.scss';
+@import './TextBlock.scss';
 
 
 
@@ -24,7 +25,7 @@ body {
   padding: 0;
   overflow-x: hidden;
 
-  p, h1, h2, h3, h4 {
+  p, h1, h2, h3, h4, h5, h6 {
     margin: 0;
   }
 
