--- a/src/scss/_sections/_Traction.scss
+++ b/src/scss/_sections/_Traction.scss
@@ -1,9 +1,11 @@
-.traction-image-container{
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  .traction-image{
-    width: 80%;
+.traction {
+  .traction-image-container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .traction-image{
+      width: 80%;
+    }
   }
 }
