--- a/src/scss/_TextBlock.scss
+++ b/src/scss/_TextBlock.scss
@@ -1,8 +1,10 @@
 .text-block-grid {
   display: inline-flex;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
-  width: 75%;
+  width: 100%;
+  margin: 50px 0px;
+
   .text-block-row {
     display: inline-flex;
     justify-content: space-between;
@@ -11,6 +13,12 @@
     .text-block{
       border: 2px solid black;
       text-align: left;
+      padding: 10px;
+      border-radius: 5px;
+      h6 {
+        font-size: 1.5em;
+        margin-bottom: 10px;
+      }
     }
   }
 }
