--- a/src/scss/_section.scss
+++ b/src/scss/_section.scss
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     margin: 40px 0px;
 
     h2 {
