--- a/src/scss/_sections/_Value.scss
+++ b/src/scss/_sections/_Value.scss
@@ -1,14 +1,16 @@
-.value-image-container {
-  width:100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  .value-image{
-    width: 75%;
-    padding-top: 0px;
-    padding-bottom: 30px;
-    @media all and(max-width: $mobile-width) {
-        width: 100%;
+.value {
+  .value-image-container {
+    width:100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    .value-image{
+      width: 75%;
+      padding-top: 0px;
+      padding-bottom: 30px;
+      @media all and(max-width: $mobile-width) {
+          width: 100%;
+      }
     }
   }
 }
