--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,7 +33,7 @@ body {
     font-family: Arial;
   }
 
-  h1, h2, h3, strong {
+  h1, h2, h3, h4, h5, h6, strong {
     font-family: 'Oswald';
     font-weight: 100;
   }
@@ -100,6 +100,7 @@ body {
 
   h6 {
     font-size: 1em;
+    font-weight: 400;
     @media all and(max-width: $mobile-width) {
       font-size: 0.5em;
     }
