--- a/src/scss/_Intro.scss
+++ b/src/scss/_Intro.scss
@@ -1,5 +1,9 @@
 .intro {
   .intro-image {
     width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    object-position: 2% 50%;
+    margin-bottom: 60px;
   }
 }
