--- a/src/scss/_components/_NavBar.scss
+++ b/src/scss/_components/_NavBar.scss
@@ -1,15 +1,18 @@
 $height: 100px;
 $nav-bar-background: white;
+$nav-bar-color: #7b728c;
+$nav-bar-text-color: #645e6f;
 
 .nav-bar {
   display: flex;
   width: 100%;
   justify-content: space-around;
+  align-items: center;
   height: $height;
   background: $nav-bar-background;
   position: fixed;
   z-index: 10;
-  box-shadow: 0px 0px 1px 2px rgba(116, 116, 125, 0.5);
+  box-shadow: 0px 0px 0.5px 0.5px rgba(113, 110, 115, 0.6);
 
   .nav-bar-line-container {
     position: absolute;
@@ -20,16 +23,16 @@ $nav-bar-background: white;
     justify-content: center;
 
     .nav-bar-line {
-      background: black;
+      background: $nav-bar-color;
       height: 2px;
       width: 90%;
     }
   }
 
   .nav-bar-circle {
-    width: 40px;
-    height: 40px;
-    border: 2px solid #293348;
+    width: 35px;
+    height: 35px;
+    border: 2.5px solid $nav-bar-color;
     border-radius: 50%;
     background: $nav-bar-background;
     transition: all 0.2s ease-in-out;
@@ -37,20 +40,22 @@ $nav-bar-background: white;
   }
 
   .nav-bar-circle:hover {
-    border-radius: 15%;
+    border-radius: 10%;
+    background: $nav-bar-color;
   }
 
   .nav-bar-item {
-    padding: 10px;
     cursor: pointer;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    width: 50px;
+    width: 35px;
 
-    h3 {
+    h4 {
       white-space: nowrap;
+      color: $nav-bar-text-color;
+      font-weight: 300;
     }
 
   }
