--- a/src/scss/_sections/_Opportunity.scss
+++ b/src/scss/_sections/_Opportunity.scss
@@ -14,15 +14,16 @@
     }
     margin: 30px 0px;
 
-    h3, p {
-      width: 100%;
+    h2, p {
+      width: 33.33%;
       display: flex;
       justify-content: center;
       text-align: center;
+      margin: 5px 0px;
     }
 
     @media all and (max-width: $skinny-mobile-width) {
-      h3, p {
+      h2, p {
         width: 50%;
         display: flex;
         justify-content: center;
