style text in main and other sass files

--- a/src/scss/_section.scss
+++ b/src/scss/_section.scss
@@ -14,7 +14,7 @@
 
     h1 {
       text-align: center;
-      width: 50%;
+      width: 75%;
     }
   }
   .section-subtitle {
@@ -35,6 +35,11 @@
     justify-content: center;
     align-items: center;
     margin: 80px 0px;
+
+    h1 {
+      text-align: center;
+      width: 75%;
+    }
 
     h2 {
       width: 50%;
