--- a/src/sections/Opportunity/_Opportunity.scss
+++ b/src/sections/Opportunity/_Opportunity.scss
@@ -5,6 +5,12 @@
     align-items: center;
     flex-direction: column;
     margin: 100px 0px;
+
+    h3 {
+      width: 45%;
+      text-align: center;
+      padding: 50px 0px;
+    }
     @media all and(max-width: $mobile-width) {
       margin: 30px 0px;
     }
