--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -109,8 +109,14 @@ body {
   }
 
   h6 {
-    font-size: 1em;
+    font-size: 1.4em;
+    margin: 0pt;
     font-weight: 400;
+    cursor: pointer;
+    font-weight: 300;
+    color: #3d3d41;
+    text-align: center;
+
     @media all and(max-width: $mobile-width) {
       font-size: 0.5em;
     }
