--- a/src/sections/Team/_Team.scss
+++ b/src/sections/Team/_Team.scss
@@ -66,6 +66,7 @@ $h2-team-text-color: #3d3d41;
 
   .team-member {
     display: block;
+    width: $profile-pic-size;
     margin-left: 25px;
     margin-right: 25px;
 
@@ -83,15 +84,11 @@ $h2-team-text-color: #3d3d41;
     display: flex;
     justify-content: center;
     width: 75vw;
+    padding: 50px;
 
     @media all and(max-width: $mobile-width) {
     display: block;
     }
-  }
-
-  .middle-row {
-    padding-top: 40px;
-    padding-bottom: 40px;
   }
 
   .profile-pic-container {
