--- a/src/scss/_TextBlock.scss
+++ b/src/scss/_TextBlock.scss
@@ -28,9 +28,10 @@ $text-block-color: #534b5d;
         margin: 50px 0px;
       }
       h6 {
-        font-size: 1.5em;
+        font-size: 1.6em;
+        text-align: left;
         color: $text-block-color;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
       }
       .text-block-description {
         .roles {
