--- a/src/sections/Adoption/_Adoption.scss
+++ b/src/sections/Adoption/_Adoption.scss
@@ -78,6 +78,7 @@ $adoption-bg-color: white;
 
         @media all and(max-width: $mobile-width) {
           width: 95%;
+          padding-bottom: 50px;
         }
 
       h6{
