--- a/src/components/Label/_Label.scss
+++ b/src/components/Label/_Label.scss
@@ -4,7 +4,13 @@ $label-color: #343e51;
   display: flex;
   justify-content: center;
   align-items: center;
+  h3{
+    font-size: 1.5em;
+    @media all and(max-width: $skinny-mobile-width) {
+      font-size: 1.1em;
+    }
 
+  }
   .label-line {
     width: 50%;
     background: $label-color;
