--- a/src/scss/_section.scss
+++ b/src/scss/_section.scss
@@ -15,6 +15,10 @@
     h1 {
       text-align: center;
       width: 55%;
+      @media all and(max-width: $mobile-width) {
+        width: 75%;
+        font-size: 2.0em;
+      }
     }
   }
   .section-subtitle {
@@ -26,6 +30,9 @@
     h3{
       width: 50%;
       text-align: center;
+      @media all and(max-width: $mobile-width) {
+        width: 80%;
+      }
     }
   }
 
