--- a/src/sections/Opportunity/_Opportunity.scss
+++ b/src/sections/Opportunity/_Opportunity.scss
@@ -10,6 +10,10 @@
       width: 45%;
       text-align: center;
       padding: 50px 0px;
+      @media all and(max-width: $mobile-width) {
+        font-size: 1.6em;
+         width: 75%;
+      }
     }
     @media all and(max-width: $mobile-width) {
       margin: 30px 0px;
