--- a/src/sections/Traction/_Traction.scss
+++ b/src/sections/Traction/_Traction.scss
@@ -30,6 +30,7 @@
       padding: 0pt;
       @media all and(max-width: $skinny-mobile-width) {
         width: 50%;
+        padding: 20px 0px;
       }
     }
   }
