--- a/src/sections/Intro/_Intro.scss
+++ b/src/sections/Intro/_Intro.scss
@@ -5,5 +5,12 @@
     object-fit: cover;
     object-position: 2% 50%;
     margin-bottom: 60px;
+
+    @media all and(max-width: 800px) {
+      width: 100vh;
+      margin-bottom: 60px;
+      height: 70vh;
+      object-fit: cover;
+    }
   }
 }
