--- a/src/components/MenuButton/_MenuButton.scss
+++ b/src/components/MenuButton/_MenuButton.scss
@@ -59,4 +59,17 @@ $bar-margin: 5px;
       transform: translateY(-12px) rotateZ(-45deg);
     }
   }
+
+  // .icon-closed {
+  //   .top-bar {
+  //     transform: translateY(0px) rotateZ(0deg);
+  //   }
+  //   .middle-bar {
+  //     transform: scaleY(0) scaleX(0);
+  //     opacity: 1;
+  //   }
+  //   .bottom-bar {
+  //     transform: translateY(0px) rotateZ(0deg);
+  //   }
+  // }
 }
