add fixed to wrapper only when in mobile width

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,7 +31,11 @@ body {
     overflow-x: hidden;
     background: white;
     transition: all 0.35s ease;
-    position: fixed;
+    
+    @media all and(max-width: $mobile-width) {
+      position: fixed;
+    }
+
   }
 
   .open {
