add horizontal margin to text block

--- a/src/scss/_TextBlock.scss
+++ b/src/scss/_TextBlock.scss
@@ -83,6 +83,7 @@ $text-block-color: #534b5d;
 
   .text-block-row {
     width: 20vw;
+    margin: 0px 5px;
     @media all and (max-width: $skinny-mobile-width) {
         width: 100%;
       }
