--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,7 @@ $mobile-position: 40vh;
 @import '../sections/Investment/Investment.scss';
 
 @import './section.scss';
+@import './ContactBlock.scss';
 @import './TextBlock.scss';
 
 body {
@@ -48,7 +49,7 @@ body {
     }
   }
 
-  p, h1, h2, h3, h4, h5, h6 {
+  p, h1, h2, h3, h4, h5, h6, ul, li {
     margin: 0;
     color: $global-color;
   }
