--- a/src/sections/Team/_Team.scss
+++ b/src/sections/Team/_Team.scss
@@ -33,8 +33,7 @@ $h2-team-text-color: #3d3d41;
     position: relative;
     width: 100vw;
     padding-top: 0px;
-
-
+    margin: 50px 0px;
   }
 
   .member-name {
